# SKIRT_utils

./: LICENSE  README.md  __init__.py  pyproject.toml
src/SKIRT_utils/: __init__.py
src/SKIRT_utils/analysis/: __init__.py  inst_plots.py  instrument.py
src/SKIRT_utils/data_reduction/: reduce_snapshot.py
src/SKIRT_utils/data_reduction/job_templates/: bigred200.sh
src/SKIRT_utils/data_reduction/ski_templates/HiZ/: equil_emission_bpass_sizes.ski  equil_emission_bpass_species.ski  equil_emission_bpass_wdmix_mw.ski
src/SKIRT_utils/setup/: __init__.py  create_files.py  reduce_snapshot.py
src/SKIRT_utils/setup/job_templates/: bigred200.sh
src/SKIRT_utils/setup/ski_templates/HiZ/: emission_bpass_sizes.ski  emission_bpass_species.ski  emission_bpass_wdmix_mw.ski  emission_bpass_wdmix_mw_voronoi.ski  emission_bpass_wdmix_smc.ski  emission_bpass_wdmix_smc_voronoi.ski  equil_emission_bpass_sizes.ski  equil_emission_bpass_species.ski  equil_emission_bpass_wdmix_mw.ski  equil_emission_bpass_wdmix_smc.ski
src/SKIRT_utils/setup/ski_templates/default/: emission_sb99_wdmix_mw_octtree.ski  emission_sb99_wdmix_mw_voronoi.ski  equilibrium_emission_sb99_wdmix_mw_octtree.ski  extinction_sb99_wdmix_mw_octtree.ski  extinction_sb99_wdmix_mw_voronoi.ski
src/SKIRT_utils/setup/ski_templates/local/: PHANGS_emission_bpass_species.ski  PHANGS_emission_bpass_wdmix_mw.ski  emission_bpass_sizes.ski  emission_bpass_species.ski  emission_bpass_wdmix_mw.ski  extinction_bpass_sizes.ski  monochromatic_bpass_sizes.ski
src/crc_scripts/utils/SKIRT/: instrument.py
